Introducing input.exclude and redefining now input.constant works

--- a/web/app/address/add.tpl.html
+++ b/web/app/address/add.tpl.html
@@ -1,1 +1,1 @@
-<cn-record-add model="model" remove-inputs="region_id timezone_offset daylight_savings"></cn-record-add>
+<cn-record-add model="model"></cn-record-add>
