--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -340,9 +340,11 @@
         <button class="btn btn-default"
                 type="button"
                 ng-repeat="op in model.module.extraOperationList.view"
+                id="{{ op.id }}"
                 ng-disabled="op.disabled"
                 ng-class="op.classes"
-                ng-click="op.operation( $state, model )">{{ op.name }}</button>
+                tooltip="{{ op.help }}"
+                ng-click="op.operation( $state, model )">{{ op.title }}</button>
       </div>
       <div class="btn-group">
         <button ng-if="model.deleteEnabled"
