--- a/web/app/webphone/status.tpl.html
+++ b/web/app/webphone/status.tpl.html
@@ -71,66 +71,81 @@
             </div>
           </div>
           <div ng-if="'recordings'==tab" class="form-body well allow-select" style="border-top-left-radius: 0px;">
-            <div class="row">
-              <div class="col-sm-12 form-text">
-                <select ng-model="model.activeRecording"
-                        ng-options="item as item.name for item in model.recordingList"
-                        ng-change="model.selectRecording()"
-                        ng-disabled="'monitoring' == model.voipOperation"
-                        class="form-control">
-                </select>
-              </div>
+            <div ng-if="0 == model.recordingList.length">
+              The application has not set up any recordings.
             </div>
-            <hr />
-            <div class="row">
-              <label class="col-sm-6 control-label">Play Sound File</label>
-              <div class="col-sm-6">
-                <select ng-model="model.activeRecordingFile"
-                        ng-options="item as item.name for item in model.activeRecording.fileList"
-                        ng-change="model.selectRecordingFile()"
-                        ng-disabled="'monitoring' == model.voipOperation ||
-                                     0 == model.activeRecording.fileList.length"
-                        class="form-control"></select>
+            <div ng-if="0 < model.recordingList.length">
+              <div class="row">
+                <div class="col-sm-12 form-text">
+                  <select ng-model="model.activeRecording"
+                          ng-options="item as item.name for item in model.recordingList"
+                          ng-change="model.selectRecording()"
+                          ng-disabled="'monitoring' == model.voipOperation"
+                          class="form-control">
+                  </select>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <label class="col-sm-6 control-label">Record Participant</label>
-              <div class="col-sm-6 form-text">{{ model.activeRecording.record }}</div>
-            </div>
-            <div class="row">
-              <label class="col-sm-6 control-label">Timer</label>
-              <div class="col-sm-6 form-text">
-                {{ model.activeRecording.timer ? model.activeRecording.timer : '(none)' }}
+              <hr />
+              <div class="row">
+                <label class="col-sm-6 control-label">Play Sound File</label>
+                <div class="col-sm-6">
+                  <select ng-model="model.activeRecordingFile"
+                          ng-options="item as item.name for item in model.activeRecording.fileList"
+                          ng-change="model.selectRecordingFile()"
+                          ng-disabled="'monitoring' == model.voipOperation ||
+                                       0 == model.activeRecording.fileList.length"
+                          class="form-control"></select>
+                </div>
               </div>
-            </div>
-            <hr />
-            <div class="row">
-              <div class="col-sm-5">
-                <button type="button"
-                        class="btn btn-primary full-width"
-                        ng-click="model.startRecording()"
-                        ng-disabled="'monitoring' == model.voipOperation || null == model.activeRecording">
-                  <span ng-if="model.activeRecording.record">
-                    Record <i class="glyphicon glyphicon-record"></i>
-                  </span>
-                  <span ng-if="!model.activeRecording.record">
-                    Play <i class="glyphicon glyphicon-play"></i>
-                  </span>
-                </button>
+              <div class="row">
+                <label class="col-sm-6 control-label">Playback Volume</label>
+                <div class="col-sm-6">
+                  <select ng-model="model.playbackVolume"
+                          ng-options="volume for volume in ['-4','-3','-2','-1','0','+1','+2','+3','+4']"
+                          ng-disabled="'monitoring' == model.voipOperation ||
+                                       0 == model.activeRecording.fileList.length"
+                          class="form-control"></select>
+                </div>
               </div>
-              <div class="col-sm-2">
-                <input type="text"
-                       class="form-control full-width"
-                       value="{{ model.activeRecording.timer }}"
-                       readonly />
+              <div class="row">
+                <label class="col-sm-6 control-label">Record Participant</label>
+                <div class="col-sm-6 form-text">{{ model.activeRecording.record }}</div>
               </div>
-              <div class="col-sm-5">
-                <button type="button"
-                        class="btn btn-danger full-width"
-                        ng-click="model.stopRecording()"
-                        ng-disabled="'monitoring' != model.voipOperation">
-                  Stop <i class="glyphicon glyphicon-stop"></i>
-                </button>
+              <div class="row">
+                <label class="col-sm-6 control-label">Timer</label>
+                <div class="col-sm-6 form-text">
+                  {{ model.activeRecording.timer ? model.activeRecording.timer : '(none)' }}
+                </div>
+              </div>
+              <hr />
+              <div class="row">
+                <div class="col-sm-5">
+                  <button type="button"
+                          class="btn btn-primary full-width"
+                          ng-click="model.startRecording()"
+                          ng-disabled="'monitoring' == model.voipOperation || null == model.activeRecording">
+                    <span ng-if="model.activeRecording.record">
+                      Record <i class="glyphicon glyphicon-record"></i>
+                    </span>
+                    <span ng-if="!model.activeRecording.record">
+                      Play <i class="glyphicon glyphicon-play"></i>
+                    </span>
+                  </button>
+                </div>
+                <div class="col-sm-2">
+                  <input type="text"
+                         class="form-control full-width"
+                         ng-model="model.timerValue"
+                         readonly />
+                </div>
+                <div class="col-sm-5">
+                  <button type="button"
+                          class="btn btn-danger full-width"
+                          ng-click="model.stopRecording()"
+                          ng-disabled="'monitoring' != model.voipOperation">
+                    Stop <i class="glyphicon glyphicon-stop"></i>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
