Tweaking webphone again

--- a/web/app/webphone/status.tpl.html
+++ b/web/app/webphone/status.tpl.html
@@ -127,7 +127,7 @@
               <div class="row">
                 <label class="col-sm-6 control-label">Timer</label>
                 <div class="col-sm-6 form-text">
-                  {{ model.activeRecording.timer ? model.activeRecording.timer : '(none)' }}
+                  {{ model.activeRecording.timer ? model.activeRecording.timer + ' seconds' : '(none)' }}
                 </div>
               </div>
               <hr />
