--- a/web/app/webphone/status.tpl.html
+++ b/web/app/webphone/status.tpl.html
@@ -83,7 +83,7 @@
               </div>
             </div>
           </div>
-          <div ng-if="'recordings'==tab" class="form-body well allow-select" style="border-top-left-radius: 0px;">
+          <div ng-if="'recordings'==tab" class="form-body well allow-select">
             <div ng-if="0 == model.recordingList.length">
               The application has not set up any recordings.
             </div>
