Making color inputs to show color instead of text

--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -115,12 +115,14 @@
                     name="name"
                     ng-model="model.viewModel.record[input.key]"
                     cn-change="patch( input.key )"
-                    class="form-control"
+                    class="form-control color-input"
+                    ng-style="{'background-color':model.viewModel.record[input.key]}"
                     type="text"
                     colorpicker="hex"
                     colorpicker-size="200"
                     colorpicker-close-on-select
                     autocomplete="off"
+                    spellcheck="false"
                     ng-readonly="!model.editEnabled || true === input.constant || 'view' == input.constant"
                     maxlength="{{ model.metadata.columnList[input.key].max_length }}"
                     ng-required="model.metadata.columnList[input.key].required"
