--- a/web/app/webphone/status.tpl.html
+++ b/web/app/webphone/status.tpl.html
@@ -166,7 +166,7 @@
         <div class="col-sm-6">
           <h4 class="text-center">Client</h4>
           <div class="form-body well text-center" tooltip="{{ javaHelp }}" tooltip-placement="bottom">
-            <iframe width="258" height="275" ng-src="{{ model.webphoneUrl }}">
+            <iframe width="100%" height="400" ng-src="{{ model.webphoneUrl }}">
               Your browser does not support the Java-based webphone, please use another browser
               if you wish to use the webphone.
             </iframe>
